# bubble_bringup

./: CMakeLists.txt  README.md  package.xml
config/: camera_intrinsic_mtx.config  camera_params.yaml  hero_params.yaml  infantry_params.yaml  old_infantry_params.yaml  radar_params.yaml  sentry_down_params.yaml  sentry_up_params.yaml  visual_aiming_params.yaml
launch/: bubble_launch.py  hero_launch.py  infantry_launch.py  old_infantry_launch.py  radar_launch.py  sentrydown_launch.py  sentryup_launch.py  visual_launch.py
rviz/: bubble_debug.rviz
script/: autostart.sh  restart_core.sh
