<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bubble_bringup</name>
  <version>1.0</version>
  <description>bubble_bringup pkg </description>
  <maintainer email="ligcox@birdiebot.top">ligcox</maintainer>
  <license>GNU General Public License v3.0</license>
  <author email="ligcox@birdiebot.top">ligcox</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
